Support build with different java versions